--- a/index.html
+++ b/index.html
@@ -2,18 +2,90 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
-    <style>
-      h1 {
-        text-align: center;
-      }
-    </style>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Hello Git</h1>
+    <div class="your-container">
+  <svg
+    class="css-waves"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    viewBox="0 24 150 28"
+    preserveAspectRatio="none"
+    shape-rendering="auto"
+  >
+    <defs>
+      <path
+        id="wave-pattern"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      ></path>
+    </defs>
+    <g class="animated-waves">
+      <use href="#wave-pattern" x="48" y="0" fill="rgba(155,255,255,0.7"></use>
+      <use href="#wave-pattern" x="48" y="3" fill="rgba(155,255,255,0.5)"></use>
+      <use href="#wave-pattern" x="48" y="5" fill="rgba(155,255,255,0.3)"></use>
+      <use href="#wave-pattern" x="48" y="7" fill="rgba(155,255,255,0.3)"></use>
+    </g>
+  </svg>
+</div>
+    <div class="card" style="width: 30rem">
+      <div class="card-body">
+        <form class="search-form" id="search-form">
+          <div class="row">
+            <div class="col-6">
+              <input
+                type="search"
+                placeholder="Type a city.."
+                autofocus="on"
+                autocomplete="off"
+                id="city-input"
+                class="form-control shadow-sm"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="form-control btn btn-primary shadow-sm w-100"
+              />
+            </div>
+          <div class="col-3">
+            <button class="btn btn-success w-100" id="current-location-button">
+              Current
+            </button>
+          </div>
+        </form>
+        <div class="row">
+          <div class="col-sm-6">
+            <h1 id="city">Sydney NSW, Australia</h1>
+            <h2 id="date">Wednesday 22:00</h2>
+            <h2 id="discription">Partly cloud</h2>
+            <p id="temperature">⛅ 19°</p>
+          </div>
+          <div class="col-sm-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li id="humidity">Humidity: 77%</li>
+              <li id="wind">Wind: 8km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div  class="mycompany">
+    <a href="https://app.netlify.com/sites/jazzy-faloodeh-2c8f10">Open-source code</a> by Iryna Butenko
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
