--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     </div>
     <div  class="mycompany">
-    <a href="https://app.netlify.com/sites/jazzy-faloodeh-2c8f10">Open-source code</a> by Iryna Butenko
+    <a href="https://github.com/iryna-butenko/weather-app">Open-source code</a> by Iryna Butenko
     </div>
     <script src="script.js"></script>
   </body>
